test/scc/expr/semantic-errors/126.t
void test()
{
    int* a;
    double b[10] = { a };
}